--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,7 @@
 @import './features/home.scss';
 @import './features/setting.scss';
 @import './features/static.scss';
+@import './features/auth.scss';
 
 // objects...
 @import './objects/layout.scss';
