--- a/src/scss/features/landing.scss
+++ b/src/scss/features/landing.scss
@@ -1,50 +1,141 @@
-.landing-header {
+.landing-item {
   display: flex;
-  height: 79px;
-  align-items: center;
-  max-width: 1344px;
-  margin: 0 auto;
-  background-color: black;
-  justify-content: space-between;
-  padding: 0 27px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  color: white;
+  flex-direction: column;
 
-  .landing-header__left-side {
-    display: flex;
+  .img-container {
+    position: relative;
+    max-width: 195px;
+    min-width: 190px;
+    height: 188px;
+    overflow: hidden;
+    img {
+      position: absolute;
+      width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 
-    .landing-header__nav-links {
+  .item-description {
+    word-wrap: break-word;
+  }
+
+  .item-price {
+  }
+}
+
+.landing {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  .landing-header {
+    background-color: #fe6232;
+    padding: 10px;
+    height: $headerHeight;
+
+    .landing-header__left-side {
       display: flex;
-      list-style-type: none;
-      gap: 33px;
-      margin: unset;
+      align-items: center;
+      max-width: 60%;
+      justify-content: space-between;
+      gap: 30px;
+      flex: 1;
 
-      .landing-header__nav-link {
-        a {
-          text-decoration: none;
+      .landing-header__nav-links {
+        display: flex;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        flex: 1;
+        justify-content: space-around;
+        font-size: 16px;
+      }
+    }
+
+    .landing-header__right-side {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+      font-size: 16px;
+
+      button {
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+        color: white;
+      }
+
+      span {
+        font-size: 25px;
+        color: white;
+        padding: 10px;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .landing-footer {
+    background-color: #f5f5f5;
+    padding: 42px 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    .container {
+      flex-direction: column;
+      align-items: center;
+      gap: 25px;
+      .landing__nav-container {
+        display: flex;
+        font-size: 12px;
+        .landing__nav-item {
+          color: rgba(0, 0, 0, 0.54);
+          padding: 0 25px;
           cursor: pointer;
-          transition: color 0.2s ease;
-          font-weight: 400;
+          + .landing__nav-item {
+            border-left: 1px solid rgba(0, 0, 0, 0.09);
+          }
+        }
+      }
+      .landing__logo-register--confirmed {
+        display: flex;
+        gap: 13px;
+        img {
+          width: 120px;
         }
       }
     }
   }
 
-  .landing-header__right-side {
-    display: flex;
-    gap: 16px;
+  .landing-body {
+    flex: 1;
+    background-color: #f5f5f5;
+    position: relative;
 
-    button {
-      background-color: black;
-      font-weight: 600;
-      cursor: pointer;
-      border: none;
+    .landing-content {
+      flex: 1;
+      .landing-content__header {
+        color: rgb(238, 77, 45);
+        font-size: 1rem;
+        font-weight: 500;
+        padding: 0.9375rem 2.875rem;
+        text-align: center;
+        height: 3.75rem;
+        background-color: white;
+        border-bottom: solid 4px red;
+        margin-bottom: 10px;
+      }
+      .landing__list-items {
+        display: grid;
+        grid-template-columns: auto auto auto auto auto auto;
+        gap: 10px;
+      }
 
-      &:nth-child(2) {
-        border: 2px solid white;
-        padding: 7px 11px 5px;
-        border-radius: 8px;
+      .landing__button-container {
+        padding: 10px 0 20px;
+        text-align: center;
+
+        .landing__button {
+        }
       }
     }
   }
