--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,6 +15,7 @@
 @import './features/setting.scss';
 @import './features/static.scss';
 @import './features/auth.scss';
+@import './features/recharge.scss';
 
 // objects...
 @import './objects/layout.scss';
