--- a/src/scss/features/auth.scss
+++ b/src/scss/features/auth.scss
@@ -10,6 +10,12 @@
     font-size: 24px;
     font-weight: 600;
   }
+
+  .register__error,
+  .login__error {
+    text-align: center;
+    color: red;
+  }
   .container {
     padding: 25px;
     background-color: white;
