--- a/src/scss/features/landing.scss
+++ b/src/scss/features/landing.scss
@@ -1,27 +1,8 @@
-.landing-item {
-  display: flex;
-  flex-direction: column;
-
-  .img-container {
-    position: relative;
-    max-width: 195px;
-    min-width: 190px;
-    height: 188px;
-    overflow: hidden;
-    img {
-      position: absolute;
-      width: 100%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-
-  .item-description {
-    word-wrap: break-word;
-  }
-
-  .item-price {
+.auth-option {
+  padding: 10px 5px;
+  cursor: pointer;
+  &:hover {
+    background-color: #fafafa;
   }
 }
 
