--- a/src/scss/features/recharge.scss
+++ b/src/scss/features/recharge.scss
@@ -7,11 +7,24 @@
     margin-top: 5%;
     text-align: center;
   }
+  .recharge__content,
   .recharge__form {
     width: 400px;
     margin: 30px auto 0;
     padding: 20px;
     background-color: white;
     border-radius: 6px;
+  }
+
+  .recharge__content{
+    text-align: center;
+    p{
+      font-size: 16px;
+      font-weight: 600;
+      span{
+        font-size: 16px;
+        margin-right: 10px;
+      }
+    }
   }
 }
