--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,6 +16,8 @@
 @import './features/static.scss';
 @import './features/auth.scss';
 @import './features/recharge.scss';
+@import './features/merchant.scss';
+@import './features/product.scss';
 
 // objects...
 @import './objects/layout.scss';
