--- a/src/scss/features/recharge.scss
+++ b/src/scss/features/recharge.scss
@@ -10,18 +10,18 @@
   .recharge__content,
   .recharge__form {
     width: 400px;
-    margin: 30px auto 0;
+    margin: 30px auto;
     padding: 20px;
     background-color: white;
     border-radius: 6px;
   }
 
-  .recharge__content{
+  .recharge__content {
     text-align: center;
-    p{
+    p {
       font-size: 16px;
       font-weight: 600;
-      span{
+      span {
         font-size: 16px;
         margin-right: 10px;
       }
