--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -33,3 +33,21 @@ code {
   max-width: 1200px;
   margin: 0 auto 30px;
 }
+
+.breadcrumb {
+  width: 100%;
+  padding: 10px 0;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+  span {
+    font-size: 16px;
+    font-weight: 600;
+
+    + span {
+      margin-left: 10px;
+    }
+  }
+}
