--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -31,7 +31,7 @@ code {
   display: flex;
   justify-content: space-between;
   max-width: 1200px;
-  margin: 0 auto 30px;
+  margin: 0 auto;
 }
 
 .breadcrumb {
